--- a/.github/workflows/publish_dry.yml
+++ b/.github/workflows/publish_dry.yml
@@ -1,10 +1,11 @@
 name: Publish (Dry Run)
 
 on:
-    push:
-      branches: [ "main" ]
-    pull_request:
-      branches: [ "main" ]
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
+  workflow_call:
 
 jobs:
   publish:
