--- a/.github/workflows/bump_version.yml
+++ b/.github/workflows/bump_version.yml
@@ -50,24 +50,26 @@ jobs:
         run: cargo check
   
       - name: Commit changes
-        if: success()
+        if: ${{ success() }}
         run: |
             git switch -c bump-version-${{ env.version }}
             git add Cargo.toml
             git commit -m "Set version to ${{ env.version }}"
             git push origin bump-version-${{ env.version }}
 
+            - name: Install GitHub CLI
+            run: sudo apt-get install -y gh
+    
       - name: Create Pull Request
-        if: success()
-        id: create_pr
-        uses: peter-evans/create-pull-request@v5
-        with:
-            token: ${{ secrets.GITHUB_TOKEN }}
-            commit-message: "Bump version to ${{ env.version }}"
-            base: main
-            branch: bump-version-${{ env.version }}
-            title: "Bump version to ${{ env.version }}"
-            body: "This PR bumps the version in Cargo.toml to ${{ env.version }}."
-            labels: version-bump
-            reviewers: KjetilIN
+        if: ${{ success() }}
+        run: |
+          source_branch=bump-version-${{ env.version }}
+          base_branch=main
 
+
+          title="Bump Version v${{ env.version }}"
+          description="Auto-generated PR to bump version of Cargo.toml"
+
+          gh pr create -B "$base_branch" -H "$source_branch" --title "$title" --body "$description"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
