--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,9 @@ readme = "README.md"
 [dependencies]
 
 
+[features]
+extensive_benchmark = [] # Enable this to run extensive benchmarks 
+
 # Development dependencies 
 [dev-dependencies]
 criterion = {version="0.4", features=["html_reports"]}
